generi  voucher and overall ui

--- a/ERP/accounting/templates/accounting/_form_base.html
+++ b/ERP/accounting/templates/accounting/_form_base.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content">
+<div class="main-content compact-page">
     <div class="page-content">
         <div class="container-fluid">
             <!-- Breadcrumb -->
