--- a/ERP/accounting/templates/accounting/journal_entry.html
+++ b/ERP/accounting/templates/accounting/journal_entry.html
@@ -49,6 +49,12 @@
     data-default-date="{{ default_date|default:'' }}"
     data-lookup-account="{{ lookup_urls.account|default:'' }}"
     data-lookup-cost-center="{{ lookup_urls.costCenter|default:'' }}"
+    data-lookup-department="{{ lookup_urls.department|default:'' }}"
+    data-lookup-project="{{ lookup_urls.project|default:'' }}"
+    data-lookup-tax-code="{{ lookup_urls.taxCode|default:'' }}"
+    data-lookup-vendor="{{ lookup_urls.vendor|default:'' }}"
+    data-lookup-customer="{{ lookup_urls.customer|default:'' }}"
+    data-lookup-product="{{ lookup_urls.product|default:'' }}"
     data-prefs-url="{{ prefs_endpoint|default:'' }}"
     data-prefs-save-url="{{ prefs_save_endpoint|default:prefs_endpoint }}"
     data-attach-upload="{{ attachment_upload_endpoint|default:'' }}"
