--- a/ERP/templates/partials/left-sidebar.html
+++ b/ERP/templates/partials/left-sidebar.html
@@ -450,6 +450,8 @@
                         <li><a href="{% url 'inventory:picklist_list' %}">Pick Lists</a></li>
                         <li><a href="{% url 'inventory:shipment_list' %}">Shipments</a></li>
                         <li><a href="{% url 'inventory:rma_list' %}">RMAs</a></li>
+                        <li><a href="{% url 'inventory:transfer_order_list' %}">Transfer Orders</a></li>
+                        <li><a href="{% url 'inventory:stock_movements' %}">Stock Movements</a></li>
                         <li>
                             <a href="javascript: void(0);" class="has-arrow">
                                 <i class="fas fa-chart-bar"></i>
