--- a/ERP/accounting/templates/accounting/account_type_list.html
+++ b/ERP/accounting/templates/accounting/account_type_list.html
@@ -49,29 +49,42 @@
 
 {% block table_body %}
 <tbody>
-    {% for type in account_types %}
-    <tr data-pk="{{ type.pk }}">
-        <td><input type="checkbox" class="form-check-input row-select" name="selected_ids" value="{{ type.pk }}" form="bulk-action-form"></td>
-        <td>{{ type.code }}</td>
-        <td>{{ type.name }}</td>
-        <td>{{ type.nature }}</td>
-        <td>{{ type.classification }}</td>
-        <td>{{ type.balance_sheet_category }}</td>
-        <td>{{ type.income_statement_category }}</td>
-        <td>{{ type.cash_flow_category }}</td>
-        <td>{{ type.display_order }}</td>
-        <td>{{ type.root_code_prefix }}</td>
-        <td>{{ type.root_code_step }}</td>
-        <td>{{ type.system_type|yesno:"Yes,No" }}</td>
-        <td>{{ type.is_archived|yesno:"Yes,No" }}</td>
-        <td>
-            <a href="{% url 'accounting:account_type_update' type.pk %}" class="btn btn-sm btn-primary">Edit</a>
-            <a href="{% url 'accounting:account_type_delete' type.pk %}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this account type?');">Delete</a>
-        </td>
-    </tr>
-    {% empty %}
-    <tr><td colspan="14">No account types found.</td></tr>
-    {% endfor %}
+    {% if is_grouped %}
+        {% for values in group_values %}
+        <tr>
+            {% for value in values %}
+            <td>{{ value }}</td>
+            {% endfor %}
+            <td colspan="11">Grouped by {{ group_by_fields|join:", " }}</td>
+        </tr>
+        {% empty %}
+        <tr><td colspan="14">No grouped data found.</td></tr>
+        {% endfor %}
+    {% else %}
+        {% for type in object_list %}
+        <tr data-pk="{{ type.pk }}">
+            <td><input type="checkbox" class="form-check-input row-select" name="selected_ids" value="{{ type.pk }}" form="bulk-action-form"></td>
+            <td>{{ type.code }}</td>
+            <td>{{ type.name }}</td>
+            <td>{{ type.nature }}</td>
+            <td>{{ type.classification }}</td>
+            <td>{{ type.balance_sheet_category }}</td>
+            <td>{{ type.income_statement_category }}</td>
+            <td>{{ type.cash_flow_category }}</td>
+            <td>{{ type.display_order }}</td>
+            <td>{{ type.root_code_prefix }}</td>
+            <td>{{ type.root_code_step }}</td>
+            <td>{{ type.system_type|yesno:"Yes,No" }}</td>
+            <td>{{ type.is_archived|yesno:"Yes,No" }}</td>
+            <td>
+                <a href="{% url 'accounting:account_type_update' type.pk %}" class="btn btn-sm btn-primary">Edit</a>
+                <a href="{% url 'accounting:account_type_delete' type.pk %}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this account type?');">Delete</a>
+            </td>
+        </tr>
+        {% empty %}
+        <tr><td colspan="14">No account types found.</td></tr>
+        {% endfor %}
+    {% endif %}
 </tbody>
 {% endblock %} 
 
