--- a/ERP/accounting/templates/accounting/partials/smart_filters.html
+++ b/ERP/accounting/templates/accounting/partials/smart_filters.html
@@ -1,6 +1,6 @@
 {% comment %}Auto-rendered filters from smart_filter_config{% endcomment %}
 {% if smart_filter_config %}
-<form method="get" class="row g-2 align-items-end mb-3" novalidate>
+<form method="get" class="smart-filters-form row g-2 align-items-end mb-2" novalidate>
     {% comment %}Basic filters (first 3){% endcomment %}
     {% for f in smart_filter_config.basic_filters %}
         {% include 'accounting/partials/smart_filters_block.html' with f=f %}
@@ -13,9 +13,31 @@
         </a>
     </div>
     <div class="collapse w-100" id="advanced-filters">
-        <div class="row g-2 mt-1">
+        <div class="row g-2 mt-0">
             {% for f in smart_filter_config.advanced_filters %}
                 {% include 'accounting/partials/smart_filters_block.html' with f=f %}
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+
+    {% if smart_filter_config.group_by_options %}
+    <div class="col-12">
+        <a class="text-decoration-none" data-bs-toggle="collapse" href="#group-by-options" role="button" aria-expanded="false" aria-controls="group-by-options">
+            Group By Options
+        </a>
+    </div>
+    <div class="collapse w-100" id="group-by-options">
+        <div class="row g-2 mt-0">
+            {% for option in smart_filter_config.group_by_options %}
+            <div class="col-md-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="group_{{ option.name }}" value="1" id="group_{{ option.name }}" {% if option.checked %}checked{% endif %}>
+                    <label class="form-check-label" for="group_{{ option.name }}">
+                        {{ option.label }}
+                    </label>
+                </div>
+            </div>
             {% endfor %}
         </div>
     </div>
